src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__boolean__cast_bool_to_string_nonstandard.snap
---
source: src/expr/src/scalar/func/impls/boolean.rs
expression: "#[sqlfunc(\n    sqlname = \"boolean_to_nonstandard_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToBool),\n    is_monotone = true\n)]\nfn cast_bool_to_string_nonstandard<'a>(a: bool) -> &'a str {\n    strconv::format_bool_static(a)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastBoolToStringNonstandard;
impl crate::func::EagerUnaryFunc for CastBoolToStringNonstandard {
    type Input<'a> = bool;
    type Output<'a> = &'a str;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_bool_to_string_nonstandard(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToBool)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastBoolToStringNonstandard {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("boolean_to_nonstandard_text")
    }
}
fn cast_bool_to_string_nonstandard<'a>(a: bool) -> &'a str {
    strconv::format_bool_static(a)
}
