src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__boolean__not.snap
---
source: src/expr/src/scalar/func/impls/boolean.rs
expression: "#[sqlfunc(\n    sqlname = \"NOT\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(Not),\n    is_monotone = true\n)]\nfn not(a: bool) -> bool {\n    !a\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct Not;
impl crate::func::EagerUnaryFunc for Not {
    type Input<'a> = bool;
    type Output<'a> = bool;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        not(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(Not)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for Not {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("NOT")
    }
}
fn not(a: bool) -> bool {
    !a
}
